tests/rosetta/out/Smalltalk/100-doors-3.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T11:38:51Z
"
| result i j |
result := ''.
1 to: 101 do: [:i |.
j := 1.
[(((j * j)) < i)] whileTrue: [.
j := (j + 1).
].
.
((((j * j)) = i)) ifTrue: [.
result := (result + 'O').
] ifFalse: [.
result := (result + '-').
].
].
.
Transcript show: (result) printString; cr.
